--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,8 @@ td {
     cursor: pointer;
 }
 img {
-    width: 50px; /* Adjust size as needed */
-    height: auto; /* Keeps aspect ratio */
+    height: 50px; /* Adjust size as needed */
+    width: auto; /* Keeps aspect ratio */
 }
 
 #content-area {
