--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,23 @@ html {
     height: 100vh;
 }
 
+ul {
+    padding: 0;
+    list-style-type: disc;
+}
+ul li {
+    display: list-item;
+}
+ul li span {
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+}
+ul li code {
+    min-width: 600px; /* Ajustez cette valeur selon vos besoins */
+    text-align: right;
+}
+
 table {
     border-collapse: collapse;
     table-layout: auto; /* Allows cells to shrink */
@@ -104,8 +121,9 @@ img {
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 10px;
-    font-size: 16px;
-    text-align: center;
+    font-size: 12px;
+    text-align: left;
     display: none; /* Hidden by default */
     white-space: nowrap;
+    width: auto;
 }
