--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,12 @@
 }
 
 h1 {
-    color: rgb(214,0,0);
+    color: rgb(255, 255, 255);
     font-size: 300%;
 }
 
 h2 {
-    color: rgb(214,0,0);
+    color: rgb(251, 255, 0);
     font-size: 100%;
 }
 
